--- a/MTS.Application/MTS.Application.csproj
+++ b/MTS.Application/MTS.Application.csproj
@@ -7,15 +7,16 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Requests\Categories\Commands\" />
+    <ProjectReference Include="..\MTS.Persistence\MTS.Persistence.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MTS.Persistence\MTS.Persistence.csproj" />
+    <Folder Include="Requests\Images\Queries\" />
   </ItemGroup>
 
 </Project>
