Upload and Download functionalies to Azure Storage.

--- a/MTS.API/MTS.API.csproj
+++ b/MTS.API/MTS.API.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTS.Application\MTS.Application.csproj" />
+    <ProjectReference Include="..\MTS.Infrastructure\MTS.Infrastructure.csproj" />
     <ProjectReference Include="..\MTS.Persistence\MTS.Persistence.csproj" />
   </ItemGroup>
 
